Version 2.3.8, released June xxth, 2003
======================================

- remove message lock on "back" button
- On config user page, don't go back to logbook page after changing a user as admin
- Check for .gif & co files in resource directory, then in themes directory
- for printable search result output, display all pages

Version 2.3.7, released May 15th, 2003
======================================

- Fixed bug in password recovery with logbooks containing blanks
- Fixed bug with logbooks containing blanks in registration notification
- Added icon for protected logbooks
- Increased number of attachments to 50
- Implemented 3D cell frames
- Added anchor for attachments
- Replace CRLF.CRLF by CRLF..CRLF in email notifications
- Option 'selection page' can now contain absolute URL
- Removed "mailto:" in email notifications
- Sort correctly upper and lower case
- Added warning if message is being edited
- Get remote host from X-Forwarded-For: in case of proxy

Version 2.3.6, released April 23rd, 2003
========================================

- Eliminated WEB_BUFFER_SIZE, made memory allocation dynamically
- Fixed bug that attachments were deleted on reply
- Added flag "Hidden = 0|1"
- Added warning if maximum number of attachments reached
- Fixed bug: Upon login on a logbook with guest access, one got
  back to the "not logged in" page if username or password was wrong

Version 2.3.5, released April 9th, 2003
=======================================

- Added option "Summary page title"
- Translate "Date" correctly
- Changed "#" to "ID"
- Added "Remember me" button
- Added password recovery facility
- Made "Self register = 3" work with languages other than English

Version 2.3.4, released April 2nd, 2003
=======================================

- Added option "Quote on reply"
- Added option "Admin textarea"
- Fixed problem that replies with attachment upload erased original
  messages
- Fixed enless loop if user gets renamed in password file but browser