@@ -186,6 +186,15 @@ It can be completely customized in order to contain logos etc. As a template,
 the standard selection page produced by <code><b>elogd</b></code> can be used.
 <p>
 
+<LI><b><code>Guest Selection page = &lt;file&gt;</code></b>
+<br>
+The same for installations which have a global password file. This means that the 
+logbook selection page is also password protected. It might be however that some
+logbooks have guest access, in which case guest access to the selection page should
+be allowed as well (maybe with only a subset of the available logbooks). In that case
+this options can be used, to show a list of logbooks with guest access.
+<p>
+
 <LI><b><code>SMTP host = &lt;host.domain&gt;</code></b>
 <br>
 This defines the SMTP host needed to send automatic email notifications. The host
