@@ -45,6 +45,7 @@ starting at the items with the most votes. You can vote for a feature, or sugges
 <tr><td>Make attributes to display selectable in "Find" page<td>1</tr>
 <tr><td>Convert elog text files into XML files and comma separated files with elconv<td>1</tr>
 <tr><td>Edit existing messages with elog utility<td>1</tr>
+<tr><td>Implement multi-line attributes<td>1</tr>
 
 </table></center><p>
 
